[gd_scene load_steps=10 format=3 uid="uid://ulyv6hidtvnj"]

[ext_resource type="Script" uid="uid://bb8mbqr3g10rb" path="res://Mapper.gd" id="1_p5pve"]
[ext_resource type="Texture2D" uid="uid://rqwpeejpq552" path="res://assets/Backgrounds/Backgrounds/Topographic.png" id="2_wijl4"]
[ext_resource type="AudioStream" uid="uid://cjw6fmgxitfkf" path="res://assets/sounds/fogsmoke.ogg" id="3_71pa8"]
[ext_resource type="Texture2D" uid="uid://dd1jns1hpdwy6" path="res://assets/Backgrounds/not2025-09-27 172802.png" id="4_p5pve"]
[ext_resource type="Texture2D" uid="uid://bikog8e5j7uvr" path="res://assets/towers/GameSprites/Sprites/SniperTower.png" id="5_71pa8"]
[ext_resource type="Texture2D" uid="uid://b76msij8vwhmr" path="res://assets/towers/GameSprites/Sprites/CannonTower.png" id="6_05x41"]
[ext_resource type="Texture2D" uid="uid://caegb1ela45b4" path="res://assets/towers/GameSprites/Sprites/DartTower.png" id="7_gqbix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wijl4"]

[sub_resource type="Curve2D" id="Curve2D_71pa8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, 295, 0, 0, 0, 0, 539, 307, 0, 0, 0, 0, 551, 45, 0, 0, 0, 0, 342, 52, 0, 0, 0, 0, 349, 599, 0, 0, 0, 0, 108, 586, 0, 0, 0, 0, 107, 413, 0, 0, 0, 0, 715, 410, 0, 0, 0, 0, 705, 189, 0, 0, 0, 0, 874, 189, 0, 0, 0, 0, 1079, 185, 0, 0, 0, 0, 1064, 538, 0, 0, 0, 0, 747, 526, 0, 0, 0, 0, 747, 716)
}
point_count = 14

[node name="Map" type="Node2D"]
script = ExtResource("1_p5pve")

[node name="Towers" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wijl4")

[node name="Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_71pa8")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.489
one_shot = true

[node name="MoneyLabel" type="Label" parent="."]
offset_left = 27.0
offset_top = 20.0
offset_right = 81.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.714253, 0.5064518, 0, 1)
text = "$100"

[node name="HealthLabel" type="Label" parent="."]
offset_left = 30.0
offset_top = 54.0
offset_right = 70.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0.99999994, 0.22953573, 0.17418528, 1)
text = "100"

[node name="Topographic" type="Sprite2D" parent="."]
z_index = -4096
position = Vector2(646, 359)
scale = Vector2(1.0328125, 1.075)
texture = ExtResource("2_wijl4")

[node name="SpeedLabel" type="Label" parent="."]
offset_left = 29.0
offset_top = 85.0
offset_right = 69.0
offset_bottom = 108.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "?"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_71pa8")
autoplay = true
parameters/looping = true

[node name="Not20250927172802" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(628.625, 354)
scale = Vector2(1.3431321, 1.409594)
texture = ExtResource("4_p5pve")

[node name="SniperTower" type="Sprite2D" parent="."]
position = Vector2(1219, 47)
texture = ExtResource("5_71pa8")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
position = Vector2(2, -59)
polygon = PackedVector2Array(995, 65, 1270, 65, 1270, 149, 995, 149)

[node name="CannonTower" type="Sprite2D" parent="."]
position = Vector2(1139, 53)
texture = ExtResource("6_05x41")

[node name="DartTower" type="Sprite2D" parent="."]
position = Vector2(1051, 49)
texture = ExtResource("7_gqbix")

[node name="Label" type="Label" parent="."]
offset_left = 1002.0
offset_top = 10.0
offset_right = 1066.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dart [A]         Bomb [S]    Sniper [D]"

[node name="Label2" type="Label" parent="."]
offset_left = 1022.0
offset_top = 69.0
offset_right = 1062.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "$250            $400            $700"
